syntax = "proto3";

package role.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/escoutdoor/linko/common/pkg/proto/role/v1;rolev1";

message Role {
    // The unique identifier of the role.
    string id = 1;

    // Name of the role.
    string name = 2;

    // Date of role creation.
    google.protobuf.Timestamp created_at = 3;

    // Date of the latest update.
    google.protobuf.Timestamp updated_at = 4;
}

message CreateRoleRequest {
    // Name of the role to create.
    string name = 1 [(buf.validate.field).string = {
        min_len: 3
    }];
}

message CreateRoleResponse {
    // Created role.
    Role role = 1;
}

message GetRoleRequest {
    // The identifier of the role to retrieve.
    string role_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetRoleResponse {
  // The retrieved user.
  Role role = 1;
}

message ListRolesRequest {
    // Identifiers of the roles to retrieve.
    repeated string role_ids = 1 [
        (buf.validate.field).repeated = {
            unique: true
        }
    ];
}

message ListRolesResponse {
    // Retrieved roles.
    repeated Role roles = 1;
}

message DeleteRoleRequest {
    // The identifier of the role to delete.
    string role_id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteRoleResponse { }
